# ledger-app-ton

./: Makefile  ledger_app.toml
.github/workflows/: swap-ci-workflow.yml
doc/: COMMANDS.md  MESSAGES.md  TRANSACTION.md
fuzzing/: fuzz_tx_parser.cc
src/: address.c  address.h  app_main.c  constants.h  crypto.c  jetton.c  jetton.h  sw.h  types.h
src/apdu/: dispatcher.c  dispatcher.h  params.h
src/common/: base64.c  base64.h  bip32_check.c  bip32_check.h  bits.c  bits.h  format_address.c  hints.c  hints.h  mybuffer.c  mybuffer.h  myformat.c  myformat.h  myread.c  myread.h
src/handler/: get_address_proof.c  get_address_proof.h  get_app_name.c  get_app_settings.c  get_public_key.c  get_public_key.h  get_version.c  sign_data.c  sign_data.h  sign_tx.c  sign_tx.h
src/helper/: send_reponse.c  send_response.c
src/proof/: proof_deserialize.c  proof_deserialize.h
src/sign_data/: sign_data_deserialize.c  sign_data_deserialize.h
src/swap/: handle_check_address.c  handle_get_printable_amount.c  handle_swap_sign_transaction.c  handle_swap_sign_transaction.h
src/transaction/: deserialize.c  deserialize.h  hash.c  transaction_hints.c  types.c  types.h
src/ui/: display_address_nbgl.c  display_bagl.c  display_proof_nbgl.c  display_sign_data_nbgl.c  display_transaction_nbgl.c  menu_nbgl.c
src/ui/action/: validate.c
src/ui/helpers/: display_address.c  display_proof.c  display_transaction.c
tests/: conftest.py  requirements.txt  setup.cfg  test_appname_cmd.py  test_name_version.py  test_proof_cmd.py  test_pubkey_cmd.py  test_settings_cmd.py  test_sign_cmd.py  test_sign_custom_data.py  test_version_cmd.py
tests/application_client/: ton_transaction.py  ton_utils.py
unit-tests/: CMakeLists.txt  test_apdu_parser.c  test_buffer.c
